--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Vou dizer tudo em poesia. <br>
             </p>
         </section>
-        <section class="imagem">
+        <section class="imagem" id="img01">
             
                 <p>
                     Não é mais como era antes <br>
@@ -60,7 +60,7 @@
                 Decifre esse rabisco. <br>
             </p>
         </section>
-            <section class="imagem">
+            <section class="imagem" id="img02">
                 
                     <p>
                         Tenho saudade das cartas <br>
