--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </section>
     </main>
     <footer>
-        <p>Site criado por <a target="_blank" href="https://www.linkedin.com/in/biancaribeiromazotti/">Bianca Ribeiro Mazotti</a> para o <a target="_blank" href="https://www.estudonauta.com/">Estudonauta</a>.</p>
+        <p>Site criado por <a target="_blank" href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a target="_blank" href="https://www.cursoemvideo.com/">Curso em Video</a>.</p>
     </footer>
 </body>
 </html>
